Changed linked list to array list